--- a/box/Vagrantfile
+++ b/box/Vagrantfile
@@ -25,6 +25,11 @@ Vagrant.configure("2") do |config|
   # NOTE: This will enable public access to the opened port
   # config.vm.network "forwarded_port", guest: 80, host: 8080
 
+  config.vm.network "forwarded_port", guest: 8000, host: 8000, auto_correct: true
+  config.vm.network "forwarded_port", guest: 8443, host: 8443, auto_correct: true
+  config.vm.network "forwarded_port", guest: 8001, host: 8001, auto_correct: true
+  config.vm.network "forwarded_port", guest: 8444, host: 8444, auto_correct: true
+  
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
   # via 127.0.0.1 to disable public access
@@ -84,5 +89,6 @@ Vagrant.configure("2") do |config|
   
   #config.vm.provision "shell", path: "apache/apache.sh"
   config.vm.provision "shell", path: "docker/docker.sh"
-  
+  #config.vm.provision "shell", path: "wso2/wso2am/wso2am.sh"
+  config.vm.provision "shell", path: "kong/kong.sh"
 end
